# altel_dma

./: .gitignore  CMakeLists.txt  Makefile  axidmachar.c  axidmachar.h
dma_checker/: CMakeLists.txt  dma_checker_1.cc  dma_checker_ori.cc
module/: Makefile  README.md
ref192/: Makefile  xilinx_dma.c
script/: loadfirmware.sh  loadmodule.sh  xsa2dtbo.sh
source/common/: CMakeLists.txt
source/exe/: CMakeLists.txt  TcpServ.hh  dmarx_dump.cc  memDeamon.cc  regctrl_main.cc  regctrl_only_main.cc  tcprx_dump.cc  testclient.cc  testctrl.cc  testdecode.cc  testdump.cc  testserver.cc  triggerGen_test.cc
source/exe/backup/: memDeamon.cc
source/lib/: CMakeLists.txt
source/lib/include/: AltelReader.hh  DataFrame.hh  FEI4Helper.hh  FirmwarePortal.hh  Layer.hh  TcpConnection.hh  TcpServer.hh  TelEvent.hpp  Telescope.hh
source/lib/misc/: altel_reg_cmd_list.json  altel_run_conf.json
source/lib/src/: AltelReader.cc  DataFrame.cc  FirmwarePortal.cc  Layer.cc  TcpConnection.cc  TcpServer.cc
source/lib/src/backup/: Telescope.cc
source/server/: TcpConnection.hh  TcpServer.cc  TcpServer.hh  dmarx_dump.cc
